--- a/coaching-shop/shop.css
+++ b/coaching-shop/shop.css
@@ -65,7 +65,7 @@
     font-size: 18px;
     line-height: 18px;
     margin-left: 1.5rem;
-    background: url(src/aboutus-coaching/Group\ 258.png);
+    background: url(src/coaching-shop/Group\ 258.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 193px;
@@ -114,154 +114,6 @@
 .line:nth-child(19) { background-color: #FFF8B8; }
 .line:nth-child(20) { background-color: #94EDCA; }
 
-
-.help-section {
-    margin-top: 8px;
-    background-image:
-    linear-gradient(to right,
-            rgba(245, 241, 233, 0.95) 10%,
-            rgba(245, 241, 233, 0.8) 40%,
-            rgba(245, 241, 233, 0) 60%
-        ),
-        url('src/aboutus-coaching/main-hero-section.png');
-    /* transform: scaleX(-1); */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    padding: 100px 0;
-    width: 100%;
-    /* margin-left: 50%; */
-    min-height: 70vh;
-}
-
-.main-content-text-111 h1{
-    width: 624px;
-    height: 130px;
-    font-family: 'Nunito';
-    font-weight: 900;
-    font-style: 'Black';
-    font-size: 65px;
-    line-height: 65px;
-    word-spacing: 10px;
-    color: #243755;
-    margin-left: 20%;
-}
-
-.main-content-text-111 p{
-    width: 550px;
-    height: 60px;
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-style: 'regular';
-    font-size: 16px;
-    line-height: 30px;
-    word-spacing: 1px;
-    color: #777777;
-}
-
-
-.btn-learn-more {
-    border-radius: 50rem;
-    width: 193px;
-    height: 54px;
-    text-transform: capitalize;
-    background: url(src/coaching/button-33.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.text-started-11{
-    font-family: 'Nunito';
-    font-weight: 800;
-    font-style: 'black';
-    font-size: 18px;
-    line-height: 40px;
-    word-spacing: 3px;
-    color: #FFFFFF;
-    max-width: 624px;
-}
-
-
-.image-collage-box {
-    border: 4px dashed #F5F1E9;
-    border-radius: 40px;
-}
-
-.image-1-inside-it{
-    border-top-left-radius: 50px;
-}
-
-.image-2-inside-it{
-    border-top-right-radius: 50px;
-}
-
-.image-3-inside-it{
-    border-bottom-right-radius: 50px;
-    border-bottom-left-radius: 50px;
-}
-
-.content-main-allins h1{
-    width: 669px;
-    height: 91px;
-    font-family: 'nunito';
-    font-weight: 900;
-    font-style: 'black';
-    font-size: 45px;
-    line-height: 45px;
-    word-spacing: 1px;
-    color: #243755;
-}
-
-.content-main-allins-p1{
-    width: 470px;
-    height: 240px;
-    font-family: 'roboto';
-    font-size: 16px;
-    font-weight: 400;
-    font-style: 'regular';
-    line-height: 30px;
-    word-spacing: 1px;
-    color: #777777;
-}
-
-.content-main-allins-p{
-    width: 470px;
-    height: 90px;
-    font-family: 'roboto';
-    font-weight: 700;
-    font-size: '16px';
-    line-height: 30px;
-    word-spacing: 1px;
-    color: #FFA1AC;
-}
-
-.span-styling-ticks{
-    width: 300px;
-    height: 30px;
-    font-family: 'roboto';
-    font-style: 'regular';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    word-spacing: 1px;
-    color: #777777;
-}
-
-.last-content-bottom-last{
-    width: 100%;
-    height: 120px;
-    font-family: 'roboto';
-    font-size: 16px;
-    font-weight: 400;
-    font-style: 'regular';
-    line-height: 30px;
-    word-spacing: 1px;
-    color: #777777;
-}
-
-.text-primary {
-    color: #007bff !important;
-}
 
 
 :root {
